[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://subscenes/tournament/round_edit_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://subscenes/tournament/dual_tourney_edit.gd" type="Script" id=3]

[node name="DualTourneyEdit" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Label" parent="." index="0"]
text = "Group"

[node name="PlayerCounter" parent="HBoxContainer" index="1"]
text = "6"

[node name="GroupNum" type="HBoxContainer" parent="." index="2"]
margin_top = 90.0
margin_right = 1920.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="GroupNum" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Number of groups:"

[node name="GroupNumInput" type="LineEdit" parent="GroupNum" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "2"
max_length = 1
placeholder_text = "1"

[node name="WinsFirst" type="HBoxContainer" parent="." index="3"]
margin_top = 140.0
margin_right = 1920.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="WinsFirst" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Wins needed for first 1v1:"

[node name="WinInput" type="LineEdit" parent="WinsFirst" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "1"
max_length = 1
placeholder_text = "1"

[node name="WinsWinnerLoser" type="HBoxContainer" parent="." index="4"]
margin_top = 190.0
margin_right = 1920.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="WinsWinnerLoser" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Wins: winners' and losers' match:"

[node name="WinInput" type="LineEdit" parent="WinsWinnerLoser" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "2"
max_length = 1
placeholder_text = "2"

[node name="WinsFinal" type="HBoxContainer" parent="." index="5"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 286.0

[node name="Label" type="Label" parent="WinsFinal" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Wins needed for final match:"

[node name="WinInput" type="LineEdit" parent="WinsFinal" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "2"
max_length = 1
placeholder_text = "2"

[node name="MapPoolEditor" parent="." index="6"]
margin_top = 290.0
margin_bottom = 376.0

[connection signal="text_changed" from="GroupNum/GroupNumInput" to="." method="_on_GroupNumInput_text_changed"]
[connection signal="text_changed" from="WinsFirst/WinInput" to="." method="_on_WinFirst_text_changed"]
[connection signal="text_changed" from="WinsWinnerLoser/WinInput" to="." method="_on_WinWL_text_changed"]
[connection signal="text_changed" from="WinsFinal/WinInput" to="." method="_on_WinFinal_text_changed"]
